[gd_scene format=3 uid="uid://mrdw2df76sn5"]

[ext_resource type="Script" uid="uid://cefocyeddixdg" path="res://scenes/objects/window/scripts/window_update.gd" id="1_f0f2n"]
[ext_resource type="Texture2D" uid="uid://cfya8jnxdx12w" path="res://sprites/ui_atlas.tres" id="2_c2ua2"]
[ext_resource type="FontFile" uid="uid://du5mkms1p7t4t" path="res://fonts/Minecraftia-Regular.ttf" id="3_4mepa"]
[ext_resource type="Texture2D" uid="uid://bxq7iklic1lfy" path="res://sprites/update_mario.png" id="4_f0f2n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uustq"]
atlas = ExtResource("2_c2ua2")
region = Rect2(31, 87, 19, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2ua2"]
atlas = ExtResource("4_f0f2n")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mepa"]
atlas = ExtResource("4_f0f2n")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_orswa"]
atlas = ExtResource("4_f0f2n")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_35ii3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2ua2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mepa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orswa")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_w4wpo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/BG:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(976, 622)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/BG:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(150, 51)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/BG/Control:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/BG:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.19607843)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control:process_mode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/BG/Mario_walking:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Control/BG/Mario_walking:position:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Control/BG/Mario_walking:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_f0f2n"]
resource_name = "mario_walking"
length = 3.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/BG/Mario_walking:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-100.0, 1100.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/BG/Mario_walking:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 2.1000001, 2.3000002),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dorux"]
resource_name = "slide"
length = 0.24188578
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/BG:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2036869),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(976, 14), Vector2(976, 658)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/BG:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2036869),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(150, 355), Vector2(150, 33)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/BG/Control:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.031550318, 0.19981869),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/BG:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05959504),
"transitions": PackedFloat32Array(0.8408964, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.22786342),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.39215687)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control:process_mode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/BG/Mario_walking:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7puge"]
_data = {
&"RESET": SubResource("Animation_w4wpo"),
&"mario_walking": SubResource("Animation_f0f2n"),
&"slide": SubResource("Animation_dorux")
}

[node name="WindowUpdating" type="CanvasLayer" unique_id=1702857631 groups=["Window", "WindowUpdating"]]
process_mode = 3
layer = 4
script = ExtResource("1_f0f2n")
window_text = "Updating... please wait."

[node name="ColorRect" type="ColorRect" parent="." unique_id=861197367]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.19607843)

[node name="Control" type="Control" parent="." unique_id=1043222835]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="NinePatchRect" parent="Control" unique_id=1405160380]
clip_children = 2
layout_mode = 1
anchors_preset = -1
anchor_right = 0.93100005
anchor_bottom = 0.91400003
offset_left = 150.0
offset_top = 51.0
offset_right = -65.68005
offset_bottom = 14.919983
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(488, 280)
mouse_behavior_recursive = 2
texture = SubResource("AtlasTexture_uustq")
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="Control" type="Control" parent="Control/BG" unique_id=2077829661]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="message" type="Label" parent="Control/BG/Control" unique_id=168959647]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -473.0
offset_top = -226.0
offset_right = 453.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_4mepa")
theme_override_font_sizes/font_size = 40
text = "Updating... please wait."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Buttons" type="Control" parent="Control/BG/Control" unique_id=96927085]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -5.0
offset_right = 10.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 0

[node name="Mario_walking" type="AnimatedSprite2D" parent="Control/BG" unique_id=703392656]
modulate = Color(1, 1, 1, 0)
position = Vector2(50, 607)
scale = Vector2(4.1875, 4.1875)
sprite_frames = SubResource("SpriteFrames_35ii3")
frame_progress = 0.82898414

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1797489500]
libraries/ = SubResource("AnimationLibrary_7puge")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished2"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
